added react-router-dom and testing register

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -6,3 +6,23 @@
   h1 {
     color: red
   }
+
+  .login-container {
+    --color: hsl(var(--primary-dark-hsl), .8);
+    background-color: var(--color);
+    box-shadow: 0 0 15px var(--color);
+    padding: 40px 30px;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 20px;
+
+    label {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: white;
+        cursor: pointer;
+    }
+  }
+  
+  
