some css for cookie

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -2,9 +2,13 @@
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
+@import "./cookie.less";
+
 
   h1 {
-    color: red
+    font-weight: bold;
+    text-align: center;
+    color: rgb(118, 74, 3)
   }
 
   .login-container {
