--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,8 +4,35 @@
   box-sizing: border-box;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+.cookies-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+  border-top: 25px;
+}
+.cookie-container {
+  background-color: #87eeee;
+  display: flex;
+  width: 400px;
+  height: 500px;
+  border-radius: 24px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+h2 {
+  color: #030337;
+}
+h4 {
+  color: #030337;
+}
+img {
+  border-radius: 50%;
+}
 h1 {
-  color: red;
+  font-weight: bold;
+  text-align: center;
+  color: #764a03;
 }
 .login-container {
   --color: hsl(var(--primary-dark-hsl), 0.8);
