--- a/public/src/style.less
+++ b/public/src/style.less
@@ -7,6 +7,8 @@
     color: red
   }
 
+  @import "./cookie.less";
+
   .login-container {
     --color: hsl(var(--primary-dark-hsl), .8);
     background-color: var(--color);
