--- a/public/src/style.less
+++ b/public/src/style.less
@@ -3,6 +3,7 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 @import "./cookie.less";
+@import "./login.less";
 
 
   h1 {
