--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,6 +4,164 @@
   box-sizing: border-box;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+.cookies-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+  border-top: 25px;
+}
+.cookie-container {
+  background-color: #87eeee;
+  display: flex;
+  width: 400px;
+  height: 500px;
+  border-radius: 24px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+h2 {
+  color: #030337;
+}
+h4 {
+  color: #030337;
+}
+img {
+  border-radius: 50%;
+}
+.login-container {
+  background-color: #ceead3;
+  box-shadow: 0 0 15px black;
+  padding: 40px 30px;
+  width: 80%;
+  max-width: 600px;
+  border-radius: 20px;
+  border-color: #ebebd9;
+  border-style: ridge;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+}
+.login-container label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #a0dba9;
+  cursor: pointer;
+}
+.login-container * {
+  --color: hsl(var(--primary-dark-hsl), 0.8);
+  background-color: var(--color);
+}
+.login-title {
+  margin: 0;
+  color: #003a70;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bolder;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 40px;
+}
+.input-login {
+  display: flex;
+  flex-direction: column;
+}
+.login-message {
+  color: #003a70;
+  font-weight: lighter;
+  text-align: center;
+  padding: 1em;
+}
+.register-link {
+  color: #003a70;
+  font-weight: lighter;
+  text-align: center;
+  padding: 2px;
+}
+.input-login label {
+  color: #003a70;
+  font-weight: lighter;
+}
+.input-login input {
+  font-size: 1.75rem;
+  padding: 0.5em;
+  background-color: #a0dba9;
+  color: #003a70;
+  font-weight: 500;
+  border: none;
+  border-radius: 12px;
+}
+.input-login.valid input {
+  box-shadow: 0 0 2px 1px hsl(var(--valid-hsl));
+}
+.input-login.error input {
+  box-shadow: 0 0 2px 1px hsl(var(--error-hsl));
+}
+.input-login:focus {
+  box-shadow: 0 0 2px 1px hsl(var(--primary-hsl));
+}
+.input-login .msg {
+  display: none;
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+.input-login.valid .msg,
+.input-login.error .msg {
+  display: block;
+}
+.input-login.valid .msg {
+  color: hsl(var(--valid-hsl));
+}
+.input-login.error .msg {
+  color: hsl(var(--error-hsl));
+}
+.login-button {
+  font-size: 0.9em;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 5%;
+  box-shadow: 2px 2px 2px 2px #3d7dca;
+  border: 3px solid #003a70;
+  border-radius: 12px;
+  background-color: #a0dba9;
+  color: #003a70;
+  transition: 0.1s;
+  cursor: pointer;
+  width: 180px;
+  margin: auto;
+}
+.logout-button:focus,
+.logout-button:hover,
+.login-button:hover,
+.login-button:focus {
+  font-size: 0.9em;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 5%;
+  box-shadow: 2px 2px 2px 2px inset #ebebd9;
+  border: 3px solid #ebebd9;
+  border-radius: 4px;
+  background-color: #add8b3;
+  color: #ffffff;
+  transition: 0.1s;
+}
+.logout-button {
+  font-size: 0.9em;
+  text-transform: uppercase;
+  margin: 14px 1vw;
+  padding: 5%;
+  box-shadow: 2px 2px 2px 2px #3d7dca;
+  border: 3px solid #003a70;
+  border-radius: 4px;
+  background-color: #a0dba9;
+  color: #003a70;
+  transition: 0.1s;
+  cursor: pointer;
+}
 h1 {
   font-weight: bold;
   text-align: center;
