firebase realtime listening

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -8,6 +8,7 @@
   }
 
   @import "./cookie.less";
+  @import './signuplogin.less';
 
   .login-container {
     --color: hsl(var(--primary-dark-hsl), .8);
