added css, main lobby functionality, player count tracker

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -164,6 +164,8 @@ img {
   color: #003A70;
   transition: 0.1s;
   cursor: pointer;
+  max-width: 300px;
+  max-height: 100px;
 }
 .login-container {
   --color: hsl(var(--primary-dark-hsl), 0.8);
@@ -180,4 +182,78 @@ img {
   gap: 10px;
   color: white;
   cursor: pointer;
+}
+.mainLobby-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.gamesContainer {
+  display: inline-flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 40px;
+  margin-top: 20px;
+}
+.cookieClicker-mainLobby-container {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 300px;
+  margin: 5px;
+  border-style: ridge;
+  background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
+  background-size: cover;
+  padding: 20px;
+  border-radius: 5px;
+}
+.cookieClicker-mainLobby-container h2,
+.cookieClicker-mainLobby-container h4 {
+  color: #c41414;
+  text-shadow: 2px 2px 2px #000000;
+  font-weight: bolder;
+}
+.gameTwo-mainLobby-container {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 300px;
+  margin: 5px;
+  border-style: ridge;
+  background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
+  background-size: cover;
+  padding: 20px;
+  border-radius: 5px;
+  background-image: url(https://static.vecteezy.com/system/resources/previews/000/170/873/original/whack-a-mole-gopher-arcade-game-free-vector.jpg);
+}
+.gameTwo-mainLobby-container h2,
+.gameTwo-mainLobby-container h4 {
+  color: #c41414;
+  text-shadow: 2px 2px 2px #000000;
+  font-weight: bolder;
+}
+.join-button {
+  height: 30px;
+  margin-top: auto;
+  margin-bottom: auto;
+  background-color: green;
+}
+.join-button:disabled {
+  background-color: grey;
+}
+.cookieClicker-loading-screen span color:red .ready {
+  animation-fill-mode: backwards;
+  animation-delay: 1;
+}
+.cookieClicker-loading-screen span .set {
+  color: #ffc107;
+  animation-delay: 2;
+}
+.cookieClicker-loading-screen span .go {
+  color: green;
+  animation-delay: 3;
 }
