added small css and added stars for each Lobby player

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -100,3 +100,13 @@
   }
 
 }
+
+.mainLobby-players-container {
+  border-style: ridge;
+}
+
+.single-lobby-player{
+  border-style: ridge;
+  padding: 10px;
+  background-color: bisque;
+}
