added error handling for login/register screens

--- a/public/src/signuplogin.less
+++ b/public/src/signuplogin.less
@@ -19,7 +19,7 @@
   }
   .login-container * {
     --color: hsl(var(--primary-dark-hsl), 0.8);
-    background-color: var(--color);
+    background-image: linear-gradient(red, orange);
   }
   .login-title {
     margin: 0;
@@ -97,7 +97,7 @@
     box-shadow: 2px 2px 2px 2px #3D7DCA;
     border: 3px solid #003A70;
     border-radius: 4px;
-    background-color: #FFCB05;
+    background-image: linear-gradient(red, orange);
     color: #003A70;
     transition: 0.1s;
     cursor: pointer;
@@ -115,7 +115,7 @@
     border: 3px solid #C85048;
     border-radius: 4px;
     background-color: #FFFFFF;
-    color: #C85048;
+    color: white;
     transition: 0.1s;
   }
   .logout-button {
