--- a/public/style/style.css
+++ b/public/style/style.css
@@ -23,13 +23,13 @@ h1 {
   justify-content: center;
   align-items: center;
 }
-h2 {
+.cookie-container h2 {
   color: #030337;
 }
-h4 {
+.cookie-container h4 {
   color: #030337;
 }
-img {
+.cookie-container img {
   border-radius: 50%;
 }
 .login-container {
@@ -53,7 +53,7 @@ img {
 }
 .login-container * {
   --color: hsl(var(--primary-dark-hsl), 0.8);
-  background-color: var(--color);
+  background-image: linear-gradient(red, orange);
 }
 .login-title {
   margin: 0;
@@ -131,7 +131,7 @@ img {
   box-shadow: 2px 2px 2px 2px #3D7DCA;
   border: 3px solid #003A70;
   border-radius: 4px;
-  background-color: #FFCB05;
+  background-image: linear-gradient(red, orange);
   color: #003A70;
   transition: 0.1s;
   cursor: pointer;
@@ -149,7 +149,7 @@ img {
   border: 3px solid #C85048;
   border-radius: 4px;
   background-color: #FFFFFF;
-  color: #C85048;
+  color: white;
   transition: 0.1s;
 }
 .logout-button {
