--- a/public/style/style.css
+++ b/public/style/style.css
@@ -187,13 +187,15 @@ h1 {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  align-items: center;
+  align-content: center;
+  background-image: linear-gradient(purple, blue, pink);
 }
 .gamesContainer {
   display: inline-flex;
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
+  align-content: center;
   gap: 40px;
   margin-top: 20px;
 }
@@ -258,10 +260,16 @@ h1 {
   animation-delay: 3;
 }
 .mainLobby-players-container {
+  display: flex;
   border-style: ridge;
+  gap: 10px;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 .single-lobby-player {
   border-style: ridge;
   padding: 10px;
   background-color: bisque;
+  margin: 10px;
+  width: 150px;
 }
