--- a/public/style/signuplogin.css
+++ b/public/style/signuplogin.css
@@ -10,49 +10,42 @@
   border-style: ridge;
 }
 .login-container label {
-  --color: hsl(var(--primary-dark-hsl), .8);
-  background-color: var(--color);
-  box-shadow: 0 0 15px var(--color);
-  padding: 40px 30px;
-  width: 80%;
-  max-width: 600px;
-  border-radius: 20px;
-
-  label {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      color: white;
-      cursor: pointer;
-  }
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #FFCB05;
+  cursor: pointer;
+  background-color: #FFCB05;
 }
 .login-container * {
   --color: hsl(var(--primary-dark-hsl), 0.8);
-  background-color: var(--color);
+  background-image: linear-gradient(red, orange);
 }
 .login-title {
   margin: 0;
-  color: white;
+  color: #003A70;
   text-align: center;
   font-size: 2rem;
-  font-weight: normal;
+  font-weight: bolder;
+  background-color: #FFCB05;
 }
 .form {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin-top: 40px;
+  background-color: #FFCB05;
 }
 .input-login {
   display: flex;
   flex-direction: column;
-  gap: 7px;
 }
 .login-message {
-  color: white;
+  color: #003A70;
   font-weight: lighter;
   text-align: center;
   padding: 1em;
+  background-color: #FFCB05;
 }
 .register-link {
   color: #003A70;
@@ -97,14 +90,16 @@
   color: hsl(var(--error-hsl));
 }
 .login-button {
-  padding: .5em 1em;
-  font-size: 1.5rem;
-  font-weight: lighter;
-  color: white;
-  background-image: linear-gradient(red,orange);
-  border: 1px solid hsl(var(--primary-hsl));
-  border-radius: .25em;
-  outline: none;
+  font-size: 0.9em;
+  text-transform: uppercase;
+  margin: 14px 1vw;
+  padding: 5%;
+  box-shadow: 2px 2px 2px 2px #3D7DCA;
+  border: 3px solid #003A70;
+  border-radius: 4px;
+  background-image: linear-gradient(red, orange);
+  color: #003A70;
+  transition: 0.1s;
   cursor: pointer;
 }
 .logout-button:focus,
@@ -120,7 +115,7 @@
   border: 3px solid #C85048;
   border-radius: 4px;
   background-color: #FFFFFF;
-  color: #C85048;
+  color: white;
   transition: 0.1s;
 }
 .logout-button {
