fixed player deletion bug

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -265,3 +265,9 @@ img {
   padding: 10px;
   background-color: bisque;
 }
+.main-lobby-player {
+  border-style: ridge;
+  padding: 10px;
+  color: white;
+  background-color: orange;
+}
