--- a/public/src/style.less
+++ b/public/src/style.less
@@ -110,3 +110,10 @@
   padding: 10px;
   background-color: bisque;
 }
+
+.main-lobby-player{
+  border-style: ridge;
+  padding: 10px;
+  color:white;
+  background-color: orange;
+}
