--- a/public/style/style.css
+++ b/public/style/style.css
@@ -33,15 +33,20 @@ h1 {
   border-radius: 50%;
 }
 .login-container {
-  --color: #FFCB05;
+  --color: hsl(var(--primary-dark-hsl), 0.8);
   background-color: var(--color);
-  box-shadow: 0 0 15px black;
+  box-shadow: 0 0 15px var(--color);
   padding: 40px 30px;
   width: 80%;
   max-width: 600px;
   border-radius: 20px;
-  border-color: #C85048;
-  border-style: ridge;
+}
+.login-container label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: white;
+  cursor: pointer;
 }
 .login-container label {
   display: flex;
@@ -167,21 +172,14 @@ h1 {
   max-width: 300px;
   max-height: 100px;
 }
-.login-container {
-  --color: hsl(var(--primary-dark-hsl), 0.8);
-  background-color: var(--color);
-  box-shadow: 0 0 15px var(--color);
-  padding: 40px 30px;
-  width: 80%;
-  max-width: 600px;
-  border-radius: 20px;
+.join-button {
+  height: 30px;
+  margin-top: auto;
+  margin-bottom: auto;
+  background-color: green;
 }
-.login-container label {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  color: white;
-  cursor: pointer;
+.join-button:disabled {
+  background-color: grey;
 }
 .mainLobby-container {
   display: flex;
@@ -229,6 +227,85 @@ h1 {
   padding: 20px;
   border-radius: 5px;
   background-image: url(https://static.vecteezy.com/system/resources/previews/000/170/873/original/whack-a-mole-gopher-arcade-game-free-vector.jpg);
+}
+.gameTwo-mainLobby-container h2,
+.gameTwo-mainLobby-container h4 {
+  color: #c41414;
+  text-shadow: 2px 2px 2px #000000;
+  font-weight: bolder;
+}
+.gameTwo-mainLobby-container h2,
+.gameTwo-mainLobby-container h4 {
+  color: #c41414;
+  text-shadow: 2px 2px 2px #000000;
+  font-weight: bolder;
+}
+.mainLobby-players-container {
+  border-style: ridge;
+}
+.single-lobby-player {
+  border-style: ridge;
+  padding: 10px;
+  background-color: bisque;
+}
+.main-lobby-player {
+  border-style: ridge;
+  padding: 10px;
+  color: white;
+  background-color: orange;
+}
+.mainLobby-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.gamesContainer {
+  display: inline-flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 40px;
+  margin-top: 20px;
+}
+.cookieClicker-mainLobby-container {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 300px;
+  margin: 5px;
+  border-style: ridge;
+  background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
+  background-size: cover;
+  padding: 20px;
+  border-radius: 5px;
+}
+.cookieClicker-mainLobby-container h2,
+.cookieClicker-mainLobby-container h4 {
+  color: #c41414;
+  text-shadow: 2px 2px 2px #000000;
+  font-weight: bolder;
+}
+.gameTwo-mainLobby-container {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 300px;
+  margin: 5px;
+  border-style: ridge;
+  background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
+  background-size: cover;
+  padding: 20px;
+  border-radius: 5px;
+  background-image: url(https://static.vecteezy.com/system/resources/previews/000/170/873/original/whack-a-mole-gopher-arcade-game-free-vector.jpg);
+}
+.gameTwo-mainLobby-container h2,
+.gameTwo-mainLobby-container h4 {
+  color: #c41414;
+  text-shadow: 2px 2px 2px #000000;
+  font-weight: bolder;
 }
 .gameTwo-mainLobby-container h2,
 .gameTwo-mainLobby-container h4 {
