--- a/public/style/signuplogin.css
+++ b/public/style/signuplogin.css
@@ -1,13 +1,18 @@
 .login-container {
-  --color: #FFCB05;
+  --color: hsl(var(--primary-dark-hsl), 0.8);
   background-color: var(--color);
-  box-shadow: 0 0 15px black;
+  box-shadow: 0 0 15px var(--color);
   padding: 40px 30px;
   width: 80%;
   max-width: 600px;
   border-radius: 20px;
-  border-color: #C85048;
-  border-style: ridge;
+}
+.login-container label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: white;
+  cursor: pointer;
 }
 .login-container label {
   display: flex;
