--- a/public/src/style.less
+++ b/public/src/style.less
@@ -92,15 +92,15 @@ h1 {
 
 }
 
-.mainLobby-players-container {
-  border-style: ridge;
-}
+// .mainLobby-players-container {
+//   border-style: ridge;
+// }
 
-.single-lobby-player {
-  border-style: ridge;
-  padding: 10px;
-  background-color: bisque;
-}
+// .single-lobby-player {
+//   border-style: ridge;
+//   padding: 10px;
+//   background-color: bisque;
+// }
 
 .ready,
 .set,
@@ -154,9 +154,9 @@ h1 {
   }
 }
 
-.main-lobby-player {
-  border-style: ridge;
-  padding: 10px;
-  color: white;
-  background-color: orange;
-}
+// .main-lobby-player {
+//   border-style: ridge;
+//   padding: 10px;
+//   color: white;
+//   background-color: orange;
+// }
