--- a/public/src/style.less
+++ b/public/src/style.less
@@ -14,11 +14,4 @@ h1 {
 @import './buttons.less';
 @import './cookieLobby.less';
 @import './mainLobby.less';
-
-.mainLobby-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-
+@import './background.less';
