--- a/public/style/style.css
+++ b/public/style/style.css
@@ -172,13 +172,75 @@ h1 {
   max-width: 300px;
   max-height: 100px;
 }
-.join-button {
-  height: 30px;
-  margin-top: auto;
-  margin-bottom: auto;
-  background-color: green;
+root {
+  --clr-btn: hsl(200, 100%, 54%);
+  --clr-bg: hsl(204, 21%, 16%);
 }
-.join-button:disabled {
+.join-button {
+  font-size: 1em;
+  font-weight: bolder;
+}
+button {
+  font-size: 4em;
+  background-image: linear-gradient(red, pink, orange);
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--clr-btn);
+  border: var(--clr-btn) 0.125em solid;
+  padding: 0.25em 1em;
+  border-radius: 0.25em;
+  text-shadow: 0 0 0.125em hsla(0, 0%, 100%, 0.817), 0 0 0.5em currentColor;
+  box-shadow: inset 0 0 0.5em 0 var(--clr-btn), 0 0 0.5em 0 var(--clr-btn);
+  position: relative;
+  border-style: ridge;
+  transition: background-color 100ms linear;
+}
+button::before {
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  background: var(--clr-btn);
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+  filter: blur(1.5em);
+  opacity: 0.7;
+}
+button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: linear-gradient(purple, red, blue);
+  color: black;
+  box-shadow: 0 0 2em 0.5em var(--clr-btn);
+  opacity: 0;
+  background-color: var(--clr-btn);
+  z-index: -1;
+  transition: opacity 100ms linear;
+}
+button:hover,
+button:focus {
+  color: black;
+  text-shadow: none;
+  background-image: linear-gradient(orange, red, pink);
+  text-shadow: 0 0 0.125em hsla(0, 0%, 100%, 0.817), 0 0 0.5em currentColor;
+  box-shadow: inset 0 0 0.5em 0 var(--clr-btn), 0 0 0.5em 0 var(--clr-btn);
+}
+button:focus::before,
+button:hover::before {
+  opacity: 1;
+}
+button:hover::after,
+button:focus::after {
+  opacity: 1;
+}
+button:disabled {
   background-color: grey;
 }
 .mainLobby-container {
@@ -234,12 +296,6 @@ h1 {
   text-shadow: 2px 2px 2px #000000;
   font-weight: bolder;
 }
-.gameTwo-mainLobby-container h2,
-.gameTwo-mainLobby-container h4 {
-  color: #c41414;
-  text-shadow: 2px 2px 2px #000000;
-  font-weight: bolder;
-}
 .mainLobby-players-container {
   border-style: ridge;
 }
@@ -254,154 +310,15 @@ h1 {
   color: white;
   background-color: orange;
 }
-.mainLobby-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+root {
+  --clr-btn: hsl(200, 100%, 54%);
+  --clr-bg: hsl(204, 21%, 16%);
 }
-.gamesContainer {
-  display: inline-flex;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: center;
-  gap: 40px;
-  margin-top: 20px;
-}
-.gamesContainer {
-  display: inline-flex;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 40px;
-  margin-top: 20px;
-}
-.cookieClicker-mainLobby-container {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 300px;
-  margin: 5px;
-  border-style: ridge;
-  background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
-  background-size: cover;
-  padding: 20px;
-  border-radius: 5px;
-}
-.cookieClicker-mainLobby-container h2,
-.cookieClicker-mainLobby-container h4 {
-  color: #c41414;
-  text-shadow: 2px 2px 2px #000000;
-  font-weight: bolder;
-}
-.gameTwo-mainLobby-container {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 300px;
-  margin: 5px;
-  border-style: ridge;
-  background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
-  background-size: cover;
-  padding: 20px;
-  border-radius: 5px;
-  background-image: url(https://static.vecteezy.com/system/resources/previews/000/170/873/original/whack-a-mole-gopher-arcade-game-free-vector.jpg);
-}
-.gameTwo-mainLobby-container h2,
-.gameTwo-mainLobby-container h4 {
-  color: #c41414;
-  text-shadow: 2px 2px 2px #000000;
-  font-weight: bolder;
-}
-.gameTwo-mainLobby-container h2,
-.gameTwo-mainLobby-container h4 {
-  color: #c41414;
-  text-shadow: 2px 2px 2px #000000;
-  font-weight: bolder;
-}
-.join-button {
-  height: 30px;
-  margin-top: auto;
-  margin-bottom: auto;
-  background-color: green;
-}
-.join-button:disabled {
-  background-color: grey;
-}
-.cookieClicker-loading-screen span color:red .ready {
-  animation-fill-mode: backwards;
-  animation-delay: 1;
-}
-.cookieClicker-loading-screen span .set {
-  color: #ffc107;
-  animation-delay: 2;
-}
-.cookieClicker-loading-screen span .go {
-  color: green;
-  animation-delay: 3;
-}
-.mainLobby-players-container {
-  display: flex;
-  border-style: ridge;
-  gap: 10px;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-.single-lobby-player {
-  border-style: ridge;
-  padding: 10px;
-  background-color: bisque;
-  margin: 10px;
-  width: 150px;
-}
-.ready,
-.set,
-.go {
-  font-size: 50px;
-  color: white;
-}
-.ready {
-  animation: mymove 1s;
-  animation-delay: 0s;
-}
-@keyframes mymove {
-  from {
-    background-color: red;
-  }
-  to {
-    background-color: blue;
-  }
-}
-.set {
-  animation: mymove2 1s;
-  animation-delay: 1s;
-}
-@keyframes mymove2 {
-  from {
-    background-color: blue;
-  }
-  to {
-    background-color: green;
-  }
-}
-.go {
-  animation: mymove3 1s;
-  animation-delay: 2s;
-}
-@keyframes mymove3 {
-  from {
-    background-color: green;
-  }
-  to {
-    background-color: yellow;
-  }
-}
-.main-lobby-player {
-  border-style: ridge;
-  padding: 10px;
-  color: white;
-  background-color: orange;
+body {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-image: linear-gradient(black, white, grey);
+  color: var(--clr-btn);
+  padding-right: 10rem;
 }
