--- a/public/src/buttons.less
+++ b/public/src/buttons.less
@@ -7,4 +7,13 @@
   
   .join-button:disabled {
     background-color: grey;
+  }.join-button {
+    height: 30px;
+    margin-top: auto;
+    margin-bottom: auto;
+    background-color: green;
+  }
+  
+  .join-button:disabled {
+    background-color: grey;
   }
