--- a/public/style/buttons.css
+++ b/public/style/buttons.css
@@ -7,3 +7,12 @@
 .join-button:disabled {
   background-color: grey;
 }
+.join-button {
+  height: 30px;
+  margin-top: auto;
+  margin-bottom: auto;
+  background-color: green;
+}
+.join-button:disabled {
+  background-color: grey;
+}
