--- a/public/src/style.less
+++ b/public/src/style.less
@@ -14,6 +14,8 @@ h1 {
 @import './buttons.less';
 @import './cookieLobby.less';
 @import './mainLobby.less';
+@import './loadingPage.less';
+@import './winnerPage.less';
 
 .mainLobby-container {
   display: flex;
@@ -102,57 +104,7 @@ h1 {
   background-color: bisque;
 }
 
-.ready,
-.set,
-.go {
-  font-size: 50px;
-  color: white;
-}
 
-.ready {
-  animation: mymove 1s;
-  animation-delay: 0s;
-}
-
-@keyframes mymove {
-  from {
-    background-color: red;
-  }
-
-  to {
-    background-color: blue
-  }
-}
-
-.set {
-  animation: mymove2 1s;
-  animation-delay: 1s;
-}
-
-@keyframes mymove2 {
-  from {
-    background-color: blue;
-  }
-
-  to {
-    background-color: green
-  }
-}
-
-.go {
-  animation: mymove3 1s;
-  animation-delay: 2s;
-}
-
-@keyframes mymove3 {
-  from {
-    background-color: green;
-  }
-
-  to {
-    background-color: yellow
-  }
-}
 
 .main-lobby-player {
   border-style: ridge;
