changes for css

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -16,7 +16,7 @@ h1 {
 @import './mainLobby.less';
 @import './loadingPage.less';
 @import './winnerPage.less';
-
+@import './background.less';
 
 .mainLobby-players-container {
   border-style: ridge;
