--- a/public/style/style.css
+++ b/public/style/style.css
@@ -172,43 +172,27 @@ h1 {
   max-width: 300px;
   max-height: 100px;
 }
+root {
+  --clr-btn: hsl(200, 100%, 54%);
+  --clr-bg: hsl(204, 21%, 16%);
+}
 .join-button {
   font-size: 1em;
   font-weight: bolder;
 }
-.join-button:disabled {
-  background-color: grey;
-}
-.join-button {
-  height: 30px;
-  margin-top: auto;
-  margin-bottom: auto;
-  background-color: green;
-}
-.join-button:disabled {
-  background-color: grey;
-}
-.mainLobby-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-.gamesContainer {
-  display: inline-flex;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 40px;
-  margin-top: 20px;
-}
-.cookieClicker-mainLobby-container {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 300px;
-  margin: 5px;
+button {
+  font-size: 4em;
+  background-image: linear-gradient(red, pink, orange);
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--clr-btn);
+  border: var(--clr-btn) 0.125em solid;
+  padding: 0.25em 1em;
+  border-radius: 0.25em;
+  text-shadow: 0 0 0.125em hsla(0, 0%, 100%, 0.817), 0 0 0.5em currentColor;
+  box-shadow: inset 0 0 0.5em 0 var(--clr-btn), 0 0 0.5em 0 var(--clr-btn);
+  position: relative;
   border-style: ridge;
   transition: background-color 100ms linear;
 }
@@ -259,9 +243,23 @@ button:focus::after {
 button:disabled {
   background-color: grey;
 }
-.cookieClicker-loading-screen {
+.join-button {
+  height: 30px;
+  margin-top: auto;
+  margin-bottom: auto;
+  background-color: green;
+}
+.join-button:disabled {
+  background-color: grey;
+}
+.mainLobby-container {
   display: flex;
+  justify-content: center;
   flex-direction: column;
+  align-items: center;
+}
+.gamesContainer {
+  display: inline-flex;
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
@@ -307,33 +305,6 @@ button:disabled {
   text-shadow: 2px 2px 2px #000000;
   font-weight: bolder;
 }
-.gameTwo-mainLobby-container h2,
-.gameTwo-mainLobby-container h4 {
-  color: #c41414;
-  text-shadow: 2px 2px 2px #000000;
-  font-weight: bolder;
-}
-.join-button {
-  height: 30px;
-  margin-top: auto;
-  margin-bottom: auto;
-  background-color: green;
-}
-.join-button:disabled {
-  background-color: grey;
-}
-.cookieClicker-loading-screen span color:red .ready {
-  animation-fill-mode: backwards;
-  animation-delay: 1;
-}
-.cookieClicker-loading-screen span .set {
-  color: #ffc107;
-  animation-delay: 2;
-}
-.cookieClicker-loading-screen span .go {
-  color: green;
-  animation-delay: 3;
-}
 .mainLobby-players-container {
   border-style: ridge;
 }
@@ -342,52 +313,132 @@ button:disabled {
   padding: 10px;
   background-color: bisque;
 }
-.ready,
-.set,
-.go {
-  font-size: 50px;
-  color: white;
-}
-.ready {
-  animation: mymove 1s;
-  animation-delay: 0s;
-}
-@keyframes mymove {
-  from {
-    background-color: red;
-  }
-  to {
-    background-color: blue;
-  }
-}
-.set {
-  animation: mymove2 1s;
-  animation-delay: 1s;
-}
-@keyframes mymove2 {
-  from {
-    background-color: blue;
-  }
-  to {
-    background-color: green;
-  }
-}
-.go {
-  animation: mymove3 1s;
-  animation-delay: 2s;
-}
-@keyframes mymove3 {
-  from {
-    background-color: green;
-  }
-  to {
-    background-color: yellow;
-  }
-}
 .main-lobby-player {
   border-style: ridge;
   padding: 10px;
-  background-color: bisque;
+  color: white;
+  background-color: orange;
+}
+.cookieClicker-loading-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url('https://samburke.files.wordpress.com/2011/08/ready-set-go-pic-001.png');
+  background-position: center;
+  background-size: cover;
+  height: 800px;
+}
+.ready,
+.set,
+.go {
+  font-size: 70px;
+  color: white;
+  visibility: hidden;
+  padding: 25px;
+  border-radius: 50%;
+}
+.ready {
+  animation: mymove 2s;
+  margin-top: 50px;
+}
+@keyframes mymove {
+  from {
+    visibility: hidden;
+    text-shadow: 2px 2px 15px #000000;
+  }
+  to {
+    visibility: visible;
+    margin-left: 100px;
+    background-image: url('http://www.nigella.com/assets/uploads/recipes/chocolate-chip-cookies-56388ed4575b0.jpg');
+    background-position: center;
+    background-size: cover;
+  }
+}
+.set {
+  animation: mymove2 2s;
+  animation-delay: 2s;
+  margin-top: 50px;
+}
+@keyframes mymove2 {
+  from {
+    font-size: 90px;
+    visibility: hidden;
+  }
+  to {
+    font-size: 90px;
+    visibility: visible;
+    margin-left: 100px;
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqHTnpzqY1mUn32uQue1PyBzDC69nOhkgmMkGy0Mj_XJSQqRRUnttENainHfB6RzZtSfU&usqp=CAU');
+    background-position: center;
+    background-size: cover;
+  }
+}
+.go {
+  animation: mymove3 2s;
+  animation-delay: 4s;
+  margin-top: 50px;
+}
+@keyframes mymove3 {
+  from {
+    font-size: 110px;
+    visibility: hidden;
+  }
+  to {
+    font-size: 110px;
+    visibility: visible;
+    margin-left: 100px;
+    background-image: url('https://t3.ftcdn.net/jpg/02/19/32/48/360_F_219324829_hyEzNkzKJlQVlyARbPAz9j2REHTPIskq.jpg');
+    background-position: center;
+    background-size: cover;
+  }
+}
+.winner-title {
+  text-align: center;
+  font-weight: 600;
+  font-size: 30px;
+  background-image: url('https://cdn.shopify.com/s/files/1/0257/6718/2416/files/Gold_Balloon_Zoom_Background.jpg?v=1595051323');
+  background-position: center;
+  background-size: cover;
+  height: 800px;
+}
+.winner-title .title-word {
+  animation: color-animation 4s linear infinite;
+  font-family: Comic Sans MS, Comic Sans, cursive;
+}
+.winner-title .title-word-1 {
+  padding-top: 200px;
+  --color-1: #5553df;
+  --color-2: #3D8DAE;
+  --color-3: #E4A9A8;
+}
+.winner-title .title-word-2 {
+  --color-1: #42d753;
+  --color-2: #ACCFCB;
+  --color-3: #17494D;
+}
+@keyframes color-animation {
+  0% {
+    color: var(--color-1);
+  }
+  32% {
+    color: var(--color-1);
+  }
+  33% {
+    color: var(--color-2);
+  }
+  65% {
+    color: var(--color-2);
+  }
+  66% {
+    color: var(--color-3);
+  }
+  99% {
+    color: var(--color-3);
+  }
+  100% {
+    color: var(--color-1);
+  }
 }
 root {
   --clr-btn: hsl(200, 100%, 54%);
@@ -400,4 +451,12 @@ body {
   background-image: linear-gradient(black, white, grey);
   color: var(--clr-btn);
   padding-right: 10rem;
+}
+.mainLobby-players-container {
+  border-style: ridge;
+}
+.single-lobby-player {
+  border-style: ridge;
+  padding: 10px;
+  background-color: bisque;
 }
