--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -1,3 +1,5 @@
+@import './colors.less';
+
 .mainLobby-container {
     display: flex;
     justify-content: center;
@@ -22,6 +24,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     width: 300px;
+    box-shadow: 0px 0px 8px 8px white;
   
     h2,
     h4 {
@@ -32,6 +35,7 @@
   
     margin: 5px;
     border-style: ridge;
+    border-color: @mainLobbyBorders;
     background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
     background-size: cover;
     padding:20px;
@@ -46,17 +50,21 @@
 
   .mainLobby-players-container {
     border-style: ridge;
+    border-color: @mainLobbyUser;
   }
   
   .single-lobby-player {
     border-style: ridge;
     padding: 10px;
-    background-color: bisque;
+    background-color: @mainLobbyPlayers;
+    border-color: @mainLobbyBorders;
+    color: @mainLobbyFont;
   }
 
   .main-lobby-player {
     border-style: ridge;
+    border-color: @mainLobbyBorders;
     padding: 10px;
-    color: white;
-    background-color: orange;
+    color: @mainLobbyFont;
+    background-color: @mainLobbyUser;
   }
