--- a/public/style/style.css
+++ b/public/style/style.css
@@ -243,8 +243,10 @@ h1 {
   flex-direction: column;
   flex-wrap: wrap;
   width: 300px;
+  box-shadow: 0px 0px 8px 8px white;
   margin: 5px;
   border-style: ridge;
+  border-color: #0A1C44;
   background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
   background-size: cover;
   padding: 20px;
@@ -262,8 +264,10 @@ h1 {
   flex-direction: column;
   flex-wrap: wrap;
   width: 300px;
+  box-shadow: 0px 0px 8px 8px white;
   margin: 5px;
   border-style: ridge;
+  border-color: #0A1C44;
   background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
   background-size: cover;
   padding: 20px;
@@ -278,17 +282,21 @@ h1 {
 }
 .mainLobby-players-container {
   border-style: ridge;
+  border-color: #486BBD;
 }
 .single-lobby-player {
   border-style: ridge;
   padding: 10px;
-  background-color: bisque;
+  background-color: #1D397A;
+  border-color: #0A1C44;
+  color: white;
 }
 .main-lobby-player {
   border-style: ridge;
+  border-color: #0A1C44;
   padding: 10px;
   color: white;
-  background-color: orange;
+  background-color: #486BBD;
 }
 .cookieClicker-loading-screen {
   display: flex;
@@ -411,11 +419,6 @@ h1 {
     color: var(--color-1);
   }
 }
-.mainLobby-players-container {
-  border-style: ridge;
-}
-.single-lobby-player {
-  border-style: ridge;
-  padding: 10px;
-  background-color: bisque;
+body {
+  background-image: linear-gradient(#7C72E0, #3D35A7, #486BBD);
 }
