--- a/public/style/mainLobby.css
+++ b/public/style/mainLobby.css
@@ -18,9 +18,10 @@
   flex-direction: column;
   flex-wrap: wrap;
   width: 300px;
-  box-shadow: #000000;
+  box-shadow: 0px 0px 8px 8px white;
   margin: 5px;
   border-style: ridge;
+  border-color: #0A1C44;
   background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
   background-size: cover;
   padding: 20px;
@@ -38,9 +39,10 @@
   flex-direction: column;
   flex-wrap: wrap;
   width: 300px;
-  box-shadow: #000000;
+  box-shadow: 0px 0px 8px 8px white;
   margin: 5px;
   border-style: ridge;
+  border-color: #0A1C44;
   background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
   background-size: cover;
   padding: 20px;
