--- a/public/style/style.css
+++ b/public/style/style.css
@@ -420,5 +420,10 @@ h1 {
   }
 }
 body {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
   background-image: linear-gradient(#7C72E0, #3D35A7, #486BBD);
+  color: var(--clr-btn);
+  padding-right: 10rem;
 }
