navBar footer and mainLobby CSS

--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -31,6 +31,7 @@
   .eachGame {
     background-color: rgb(219, 236, 250);
     border-radius: 10px;
+    padding:30px;
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -54,6 +55,7 @@
     background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
     background-size: cover;
     border-radius: 20px;
+    margin-bottom: 10px;
   
   }
   
@@ -63,7 +65,6 @@
   }
 
   .mainLobby-players-container {
-    // margin-top: 40px;
     display:flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -80,7 +81,7 @@
   .main-lobby-player {
     width:130px;
     background-color: rgb(142, 181, 244);
-    border-radius: 20px;
+    border-radius: 10px;
     padding:10px;
     border:dimgray;
   }
