--- a/public/src/style.less
+++ b/public/src/style.less
@@ -16,17 +16,7 @@ h1 {
 @import './mainLobby.less';
 @import './loadingPage.less';
 @import './winnerPage.less';
-
-
-// .mainLobby-players-container {
-//   border-style: ridge;
-// }
-
-// .single-lobby-player {
-//   border-style: ridge;
-//   padding: 10px;
-//   background-color: bisque;
-// }
+@import './nav-footer.less';
 
 
 
