--- a/public/style/style.css
+++ b/public/style/style.css
@@ -181,6 +181,15 @@ h1 {
 .join-button:disabled {
   background-color: grey;
 }
+.join-button {
+  height: 30px;
+  margin-top: auto;
+  margin-bottom: auto;
+  background-color: green;
+}
+.join-button:disabled {
+  background-color: grey;
+}
 .mainLobby-container {
   display: flex;
   justify-content: center;
@@ -209,6 +218,7 @@ h1 {
 .eachGame {
   background-color: #dbecfa;
   border-radius: 10px;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -229,28 +239,16 @@ h1 {
   background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
   background-size: cover;
   border-radius: 20px;
+  margin-bottom: 10px;
 }
 .gameTwo-mainLobby-container {
-  height: 300px;
-  border-radius: 20px;
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  flex-wrap: wrap;
   width: 300px;
-  margin: 5px;
-  border-style: ridge;
+  height: 300px;
   background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
   background-size: cover;
-  padding: 20px;
-  border-radius: 5px;
+  border-radius: 20px;
+  margin-bottom: 10px;
   background-image: url(https://static.vecteezy.com/system/resources/previews/000/170/873/original/whack-a-mole-gopher-arcade-game-free-vector.jpg);
-}
-.gameTwo-mainLobby-container h2,
-.gameTwo-mainLobby-container h4 {
-  color: #c41414;
-  text-shadow: 2px 2px 2px #000000;
-  font-weight: bolder;
 }
 .mainLobby-players-container {
   display: flex;
@@ -263,7 +261,7 @@ h1 {
 .single-lobby-player {
   width: 130px;
   background-color: #8eb5f4;
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 10px;
   border: dimgray;
   background-color: #7aa8f2;
@@ -271,7 +269,7 @@ h1 {
 .main-lobby-player {
   width: 130px;
   background-color: #8eb5f4;
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 10px;
   border: dimgray;
 }
@@ -396,6 +394,45 @@ h1 {
     color: var(--color-1);
   }
 }
-.mainLobby-players-container {
-  border-style: ridge;
+.navBar {
+  display: flex;
+  justify-content: space-between;
+  background-color: #486BBD;
+}
+.navBar .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  flex-direction: row;
+}
+.navBar .logo span {
+  font-family: monospace, sans-serif;
+  font-weight: bolder;
+}
+.navBar img {
+  height: 70px;
+  width: 100px;
+}
+.navBar .nav-right {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 30px;
+  margin-right: 30px;
+}
+.navBar .nav-right .nav-link {
+  text-decoration: none;
+  font-size: 24px;
+  font-family: sans-serif, serif;
+  color: black;
+}
+.footer {
+  background-color: #486BBD;
+  padding: 5px;
+  display: flex;
+  justify-content: space-around;
+}
+.footer img {
+  height: 46px;
 }
