--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -7,11 +7,11 @@
     align-items: center;
 
     h1{
-      background-image: linear-gradient(45deg, #553c9a, #ee4b2b);;
+      background-image: linear-gradient(45deg, #3c07cd, #c72707);;
       color: transparent;
       background-clip: text;
       -webkit-background-clip: text;
-      font-weight: bolder;
+      font-weight:bolder;
       font-size: 56px;
       font-family: cursive,serif;
       margin-bottom: 50px;
