--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -1,6 +1,6 @@
 
 .navBar {
-    // padding:10px;
+    margin:0;
     display:flex;
     justify-content: space-between;
     background-color: #486BBD;
@@ -15,11 +15,13 @@
         span {
             font-family: monospace,sans-serif;
             font-weight: bolder;
+            font-size: 30px;
         }
     }
     img {
-        height:70px;
-        width:100px;
+        height:90px;
+        width:140px;
+        border-radius: 50px;
     }
 
     .nav-right {
@@ -44,6 +46,9 @@
     padding:5px;
     display:flex;
     justify-content: space-around;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 
     img {
         height:46px;
