--- a/public/src/style.less
+++ b/public/src/style.less
@@ -19,14 +19,24 @@ h1 {
 @import './mainLobby.less';
 @import './loadingPage.less';
 @import './winnerPage.less';
+@import './nav-footer.less';
 
 
-body {
+body{
   min-height: 100vh;
   display: grid;
   place-items: center;
-  background-image: linear-gradient(@cookieLobbyBorders, @cookiebg, @cookieLobbyUser);
+  // background-image: linear-gradient(@cookieLobbyBorders, @cookiebg, @cookieLobbyUser);
   color: var(--clr-btn);
   padding-right: 10rem;
+  margin:0;
 }
+
+#root {
+  width:100vw;
+  height:100vh;
+}
+
+
+
 
