--- a/public/style/style.css
+++ b/public/style/style.css
@@ -230,7 +230,7 @@ h1 {
   align-items: center;
 }
 .mainLobby-container h1 {
-  background-image: linear-gradient(45deg, #553c9a, #ee4b2b);
+  background-image: linear-gradient(45deg, #3c07cd, #c72707);
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
@@ -303,7 +303,6 @@ h1 {
   width: 130px;
   background-color: #8eb5f4;
   border-radius: 10px;
-  border-color: #0A1C44;
   padding: 10px;
   border: dimgray;
 }
@@ -429,6 +428,7 @@ h1 {
   }
 }
 .navBar {
+  margin: 0;
   display: flex;
   justify-content: space-between;
   background-color: #486BBD;
@@ -443,10 +443,12 @@ h1 {
 .navBar .logo span {
   font-family: monospace, sans-serif;
   font-weight: bolder;
+  font-size: 30px;
 }
 .navBar img {
-  height: 70px;
-  width: 100px;
+  height: 90px;
+  width: 140px;
+  border-radius: 50px;
 }
 .navBar .nav-right {
   display: flex;
@@ -466,7 +468,22 @@ h1 {
   padding: 5px;
   display: flex;
   justify-content: space-around;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 .footer img {
   height: 46px;
+}
+body {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  color: var(--clr-btn);
+  padding-right: 10rem;
+  margin: 0;
+}
+#root {
+  width: 100vw;
+  height: 100vh;
 }
