--- a/public/src/signuplogin.less
+++ b/public/src/signuplogin.less
@@ -95,47 +95,47 @@
   .input-login.error .msg {
     color: hsl(var(--error-hsl));
   }
-  .login-button {
-    font-size: 0.9em;
-    text-transform: uppercase;
-    margin: 14px 1vw;
-    padding: 5%;
-    box-shadow: 2px 2px 2px 2px #3D7DCA;
-    border: 3px solid #003A70;
-    border-radius: 4px;
-    background-image: linear-gradient(red, orange);
-    color: #003A70;
-    transition: 0.1s;
-    cursor: pointer;
-  }
-  .logout-button:focus,
-  .logout-button:hover,
-  .login-button:hover,
-  .login-button:focus {
-    font-size: 0.9em;
-    text-transform: uppercase;
-    font-weight: bold;
-    margin: 14px 1vw;
-    padding: 5%;
-    box-shadow: 2px 2px 2px 2px inset #C85048;
-    border: 3px solid #C85048;
-    border-radius: 4px;
-    background-color: #FFFFFF;
-    color: white;
-    transition: 0.1s;
-  }
-  .logout-button {
-    font-size: 0.9em;
-    text-transform: uppercase;
-    margin: 14px 1vw;
-    padding: 5%;
-    box-shadow: 2px 2px 2px 2px #3D7DCA;
-    border: 3px solid #003A70;
-    border-radius: 4px;
-    background-color: #FFCB05;
-    color: #003A70;
-    transition: 0.1s;
-    cursor: pointer;
-    max-width: 300px;
-    max-height: 100px;
-  }
+  // .login-button {
+  //   font-size: 0.9em;
+  //   text-transform: uppercase;
+  //   margin: 14px 1vw;
+  //   padding: 5%;
+  //   box-shadow: 2px 2px 2px 2px #3D7DCA;
+  //   border: 3px solid #003A70;
+  //   border-radius: 4px;
+  //   background-image: linear-gradient(red, orange);
+  //   color: #003A70;
+  //   transition: 0.1s;
+  //   cursor: pointer;
+  // }
+  // .logout-button:focus,
+  // .logout-button:hover,
+  // .login-button:hover,
+  // .login-button:focus {
+  //   font-size: 0.9em;
+  //   text-transform: uppercase;
+  //   font-weight: bold;
+  //   margin: 14px 1vw;
+  //   padding: 5%;
+  //   box-shadow: 2px 2px 2px 2px inset #C85048;
+  //   border: 3px solid #C85048;
+  //   border-radius: 4px;
+  //   background-color: #FFFFFF;
+  //   color: white;
+  //   transition: 0.1s;
+  // }
+  // .logout-button {
+  //   font-size: 0.9em;
+  //   text-transform: uppercase;
+  //   margin: 14px 1vw;
+  //   padding: 5%;
+  //   box-shadow: 2px 2px 2px 2px #3D7DCA;
+  //   border: 3px solid #003A70;
+  //   border-radius: 4px;
+  //   background-color: #FFCB05;
+  //   color: #003A70;
+  //   transition: 0.1s;
+  //   cursor: pointer;
+  //   max-width: 300px;
+  //   max-height: 100px;
+  // }
