--- a/public/style/style.css
+++ b/public/style/style.css
@@ -32,6 +32,90 @@ h1 {
 .cookie-container img {
   border-radius: 50%;
 }
+.join-button {
+  font-size: 1.2em;
+  font-weight: bolder;
+}
+.logout-button,
+.login-button {
+  font-size: 1.6em;
+  margin: 1em;
+}
+button {
+  font-size: 2em;
+  margin: 10px;
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+  border: #0A1C44 0.125em solid;
+  padding: 0.25em 1em;
+  border-radius: 0.3em;
+  background-color: #175075;
+  text-decoration: solid;
+  text-shadow: 0 0 0.125em lightgrey, 0 0 0.5em #1D397A;
+  box-shadow: inset 0 0 0.5em 0 #1D397A, 0 0 0.5em 0 #486BBD;
+  position: relative;
+  border-style: ridge;
+  transition: background-color 100ms linear;
+}
+button::before {
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  background-color: #1D397A;
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+  filter: blur(1.5em);
+  opacity: 0.7;
+}
+button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: black;
+  box-shadow: 0 0 2em 0.5em black;
+  opacity: 0;
+  background-color: #1D397A;
+  z-index: -1;
+  transition: opacity 100ms linear;
+  transition: 1s;
+}
+.login-button:hover,
+.login-button:focus,
+.join-button:focus,
+.join-button:hover {
+  color: whitesmoke;
+  text-shadow: none;
+  text-shadow: 0 0 0.125em black, 0 0 0.5em currentColor;
+  box-shadow: inset 0 0 0.5em 0 whitesmoke, 0 0 0.5em 0 #7C72E0;
+  transition: 0.5s;
+}
+button:hover,
+button:focus {
+  color: #7C72E0;
+  text-shadow: none;
+  text-shadow: 0 0 0.125em black, 0 0 0.5em currentColor;
+  box-shadow: inset 0 0 0.5em 0 #7C72E0, 0 0 0.5em 0 #7C72E0;
+  transition: 0.75s;
+}
+button:focus::before,
+button:hover::before {
+  opacity: 1;
+}
+button:hover::after,
+button:focus::after {
+  opacity: 1;
+}
+button:disabled {
+  background-color: grey;
+}
 .login-container {
   --color: hsl(var(--primary-dark-hsl), 0.8);
   background-color: var(--color);
@@ -128,130 +212,6 @@ h1 {
 .input-login.error .msg {
   color: hsl(var(--error-hsl));
 }
-.login-button {
-  font-size: 0.9em;
-  text-transform: uppercase;
-  margin: 14px 1vw;
-  padding: 5%;
-  box-shadow: 2px 2px 2px 2px #3D7DCA;
-  border: 3px solid #003A70;
-  border-radius: 4px;
-  background-image: linear-gradient(red, orange);
-  color: #003A70;
-  transition: 0.1s;
-  cursor: pointer;
-}
-.logout-button:focus,
-.logout-button:hover,
-.login-button:hover,
-.login-button:focus {
-  font-size: 0.9em;
-  text-transform: uppercase;
-  font-weight: bold;
-  margin: 14px 1vw;
-  padding: 5%;
-  box-shadow: 2px 2px 2px 2px inset #C85048;
-  border: 3px solid #C85048;
-  border-radius: 4px;
-  background-color: #FFFFFF;
-  color: white;
-  transition: 0.1s;
-}
-.logout-button {
-  font-size: 0.9em;
-  text-transform: uppercase;
-  margin: 14px 1vw;
-  padding: 5%;
-  box-shadow: 2px 2px 2px 2px #3D7DCA;
-  border: 3px solid #003A70;
-  border-radius: 4px;
-  background-color: #FFCB05;
-  color: #003A70;
-  transition: 0.1s;
-  cursor: pointer;
-  max-width: 300px;
-  max-height: 100px;
-}
-root {
-  --clr-btn: hsl(200, 100%, 54%);
-  --clr-bg: hsl(204, 21%, 16%);
-}
-.join-button {
-  font-size: 1em;
-  font-weight: bolder;
-}
-button {
-  font-size: 4em;
-  background-image: linear-gradient(red, pink, orange);
-  display: inline-block;
-  cursor: pointer;
-  text-decoration: none;
-  color: var(--clr-btn);
-  border: var(--clr-btn) 0.125em solid;
-  padding: 0.25em 1em;
-  border-radius: 0.25em;
-  text-shadow: 0 0 0.125em hsla(0, 0%, 100%, 0.817), 0 0 0.5em currentColor;
-  box-shadow: inset 0 0 0.5em 0 var(--clr-btn), 0 0 0.5em 0 var(--clr-btn);
-  position: relative;
-  border-style: ridge;
-  transition: background-color 100ms linear;
-}
-button::before {
-  pointer-events: none;
-  content: "";
-  position: absolute;
-  background: var(--clr-btn);
-  top: 120%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
-  filter: blur(1.5em);
-  opacity: 0.7;
-}
-button::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-image: linear-gradient(purple, red, blue);
-  color: black;
-  box-shadow: 0 0 2em 0.5em var(--clr-btn);
-  opacity: 0;
-  background-color: var(--clr-btn);
-  z-index: -1;
-  transition: opacity 100ms linear;
-}
-button:hover,
-button:focus {
-  color: black;
-  text-shadow: none;
-  background-image: linear-gradient(orange, red, pink);
-  text-shadow: 0 0 0.125em hsla(0, 0%, 100%, 0.817), 0 0 0.5em currentColor;
-  box-shadow: inset 0 0 0.5em 0 var(--clr-btn), 0 0 0.5em 0 var(--clr-btn);
-}
-button:focus::before,
-button:hover::before {
-  opacity: 1;
-}
-button:hover::after,
-button:focus::after {
-  opacity: 1;
-}
-button:disabled {
-  background-color: grey;
-}
-.join-button {
-  height: 30px;
-  margin-top: auto;
-  margin-bottom: auto;
-  background-color: green;
-}
-.join-button:disabled {
-  background-color: grey;
-}
 .lobby-container {
   display: flex;
   justify-content: center;
@@ -309,7 +269,7 @@ button:disabled {
   margin: 5px;
   border-style: ridge;
   border-color: #0A1C44;
-  background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
+  background-image: url(https://i.pinimg.com/550x/80/3c/e7/803ce7c0e4a58ec63cd72c09410866d0.jpg);
   background-size: cover;
   padding: 20px;
   border-radius: 5px;
@@ -330,7 +290,7 @@ button:disabled {
   margin: 5px;
   border-style: ridge;
   border-color: #0A1C44;
-  background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
+  background-image: url(https://i.pinimg.com/550x/80/3c/e7/803ce7c0e4a58ec63cd72c09410866d0.jpg);
   background-size: cover;
   padding: 20px;
   border-radius: 5px;
