saving changes before main merge

--- a/public/src/buttons.less
+++ b/public/src/buttons.less
@@ -11,6 +11,12 @@
     margin: 1em;
 }
 
+.logout-button{
+    position: fixed;
+    bottom: 50px;
+    right: 0;
+}
+
 
 button {
     font-size: 2em;
