--- a/public/src/cookieLobby.less
+++ b/public/src/cookieLobby.less
@@ -1,8 +1,11 @@
-.lobby-container {
+.lobbyContainer {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    button{
+      margin-left: 0;
+    }
 }
 
 .welcome {
@@ -21,7 +24,6 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: lightblue;
 }
 
 .players {
