--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -78,7 +78,8 @@
   
   .single-lobby-player {
     .main-lobby-player;
-    background-color: rgb(122, 168, 242);
+    background-color: @mainLobbyPlayers;
+    box-shadow: 0 0 0.5em 0 black;
   }
 
   .main-lobby-player {
@@ -87,4 +88,7 @@
     border-radius: 10px;
     padding:10px;
     border:dimgray;
+    box-shadow: 0 0 0.5em .5em whitesmoke;
   }
+
+
