--- a/public/src/style.less
+++ b/public/src/style.less
@@ -27,7 +27,7 @@ body{
   width: 100vw;
   display: grid;
   place-items: center;
-  // background-image: linear-gradient(@cookieLobbyBorders, @cookiebg, @cookieLobbyUser);
+  background-image: linear-gradient(@cookieLobbyBorders, @cookiebg, @cookieLobbyBorders);
   color: var(--clr-btn);
   margin:0;
 }
