--- a/public/src/signuplogin.less
+++ b/public/src/signuplogin.less
@@ -1,7 +1,11 @@
+.full-screen-container{
+  display: flex;
+  justify-content: center;
+}
+
 .login-container {
-  --color: hsl(var(--primary-dark-hsl), .8);
-  background-color: var(--color);
-  box-shadow: 0 0 15px var(--color);
+  background-image: linear-gradient(@Borders, @Players);
+  box-shadow: 0 0 15px black;
   padding: 40px 30px;
   width: 80%;
   max-width: 600px;
@@ -14,6 +18,12 @@
     color: white;
     cursor: pointer;
   }
+  margin: 30px;
+
+  button{
+    width: 300px;
+    position: center;
+  }
 }
   .login-container label {
     display: flex;
@@ -21,54 +31,48 @@
     gap: 10px;
     color: #FFCB05;
     cursor: pointer;
-    background-color: #FFCB05;
   }
-  .login-container * {
-    --color: hsl(var(--primary-dark-hsl), 0.8);
-    background-image: linear-gradient(red, orange);
+  .login-container {
+    background-image: linear-gradient(@Borders, @Players);
   }
   .login-title {
     margin: 0;
-    color: #003A70;
+    color: white;
     text-align: center;
     font-size: 2rem;
     font-weight: bolder;
-    background-color: #FFCB05;
   }
   .form {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 40px;
-    background-color: #FFCB05;
   }
   .input-login {
     display: flex;
     flex-direction: column;
   }
   .login-message {
-    color: #003A70;
+    color: white;
     font-weight: lighter;
     text-align: center;
     padding: 1em;
-    background-color: #FFCB05;
   }
   .register-link {
-    color: #003A70;
+    color: white;
     font-weight: lighter;
     text-align: center;
     padding: 2px;
-    background-color: #FFCB05;
   }
   .input-login label {
-    color: #003A70;
+    color: white;
     font-weight: lighter;
   }
   .input-login input {
     font-size: 1.75rem;
     padding: 0.5em;
-    background-color: #C85048;
-    color: #003A70;
+    background-color: @Players;
+    color: white;
     font-weight: 500;
   }
   .input-login.valid input {
@@ -95,47 +99,4 @@
   .input-login.error .msg {
     color: hsl(var(--error-hsl));
   }
-  // .login-button {
-  //   font-size: 0.9em;
-  //   text-transform: uppercase;
-  //   margin: 14px 1vw;
-  //   padding: 5%;
-  //   box-shadow: 2px 2px 2px 2px #3D7DCA;
-  //   border: 3px solid #003A70;
-  //   border-radius: 4px;
-  //   background-image: linear-gradient(red, orange);
-  //   color: #003A70;
-  //   transition: 0.1s;
-  //   cursor: pointer;
-  // }
-  // .logout-button:focus,
-  // .logout-button:hover,
-  // .login-button:hover,
-  // .login-button:focus {
-  //   font-size: 0.9em;
-  //   text-transform: uppercase;
-  //   font-weight: bold;
-  //   margin: 14px 1vw;
-  //   padding: 5%;
-  //   box-shadow: 2px 2px 2px 2px inset #C85048;
-  //   border: 3px solid #C85048;
-  //   border-radius: 4px;
-  //   background-color: #FFFFFF;
-  //   color: white;
-  //   transition: 0.1s;
-  // }
-  // .logout-button {
-  //   font-size: 0.9em;
-  //   text-transform: uppercase;
-  //   margin: 14px 1vw;
-  //   padding: 5%;
-  //   box-shadow: 2px 2px 2px 2px #3D7DCA;
-  //   border: 3px solid #003A70;
-  //   border-radius: 4px;
-  //   background-color: #FFCB05;
-  //   color: #003A70;
-  //   transition: 0.1s;
-  //   cursor: pointer;
-  //   max-width: 300px;
-  //   max-height: 100px;
-  // }
+ 
