--- a/public/style/cookieLobby.css
+++ b/public/style/cookieLobby.css
@@ -14,6 +14,7 @@
   align-items: center;
 }
 .PlayersContainer {
+  height: 70vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
