--- a/public/style/style.css
+++ b/public/style/style.css
@@ -41,6 +41,11 @@ h1 {
   font-size: 1.6em;
   margin: 1em;
 }
+.logout-button {
+  position: fixed;
+  bottom: 50px;
+  right: 0;
+}
 button {
   font-size: 2em;
   margin: 10px;
@@ -116,14 +121,18 @@ button:focus::after {
 button:disabled {
   background-color: grey;
 }
+.full-screen-container {
+  display: flex;
+  justify-content: center;
+}
 .login-container {
-  --color: hsl(var(--primary-dark-hsl), 0.8);
-  background-color: var(--color);
-  box-shadow: 0 0 15px var(--color);
+  background-image: linear-gradient(#66ADDB, #072A41);
+  box-shadow: 0 0 15px black;
   padding: 40px 30px;
   width: 80%;
   max-width: 600px;
   border-radius: 20px;
+  margin: 30px;
 }
 .login-container label {
   display: flex;
@@ -132,60 +141,58 @@ button:disabled {
   color: white;
   cursor: pointer;
 }
+.login-container button {
+  width: 300px;
+  position: center;
+}
 .login-container label {
   display: flex;
   align-items: center;
   gap: 10px;
   color: #FFCB05;
   cursor: pointer;
-  background-color: #FFCB05;
 }
-.login-container * {
-  --color: hsl(var(--primary-dark-hsl), 0.8);
-  background-image: linear-gradient(red, orange);
+.login-container {
+  background-image: linear-gradient(#66ADDB, #072A41);
 }
 .login-title {
   margin: 0;
-  color: #003A70;
+  color: white;
   text-align: center;
   font-size: 2rem;
   font-weight: bolder;
-  background-color: #FFCB05;
 }
 .form {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin-top: 40px;
-  background-color: #FFCB05;
 }
 .input-login {
   display: flex;
   flex-direction: column;
 }
 .login-message {
-  color: #003A70;
+  color: white;
   font-weight: lighter;
   text-align: center;
   padding: 1em;
-  background-color: #FFCB05;
 }
 .register-link {
-  color: #003A70;
+  color: white;
   font-weight: lighter;
   text-align: center;
   padding: 2px;
-  background-color: #FFCB05;
 }
 .input-login label {
-  color: #003A70;
+  color: white;
   font-weight: lighter;
 }
 .input-login input {
   font-size: 1.75rem;
   padding: 0.5em;
-  background-color: #C85048;
-  color: #003A70;
+  background-color: #072A41;
+  color: white;
   font-weight: 500;
 }
 .input-login.valid input {
@@ -212,11 +219,14 @@ button:disabled {
 .input-login.error .msg {
   color: hsl(var(--error-hsl));
 }
-.lobby-container {
+.lobbyContainer {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+}
+.lobbyContainer button {
+  margin-left: 0;
 }
 .welcome {
   color: coral;
@@ -233,7 +243,6 @@ button:disabled {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: lightblue;
 }
 .players {
   border-style: ridge;
@@ -321,7 +330,9 @@ button:disabled {
   border-radius: 10px;
   padding: 10px;
   border: dimgray;
-  background-color: #7aa8f2;
+  box-shadow: 0 0 0.5em 0.5em whitesmoke;
+  background-color: #1D397A;
+  box-shadow: 0 0 0.5em 0 black;
 }
 .main-lobby-player {
   width: 130px;
@@ -329,6 +340,7 @@ button:disabled {
   border-radius: 10px;
   padding: 10px;
   border: dimgray;
+  box-shadow: 0 0 0.5em 0.5em whitesmoke;
 }
 .cookieClicker-loading-screen {
   display: flex;
@@ -512,6 +524,7 @@ body {
   width: 100vw;
   display: grid;
   place-items: center;
+  background-image: linear-gradient(#7C72E0, #3D35A7, #7C72E0);
   color: var(--clr-btn);
   margin: 0;
 }
