footer fixed, working version, winner page loaded

--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -73,7 +73,7 @@
     justify-content: space-around;
     gap:25px;
     border:none;
-    width: 600px;
+    width: 100%;
   }
   
   .single-lobby-player {
