--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -46,8 +46,8 @@
     padding:5px;
     display:flex;
     justify-content: space-around;
-    position: relative;
-    width: 100%;
+    width:100vw;
+    position:absolute;
 
     img {
         height:46px;
@@ -56,10 +56,10 @@
 
 @media only screen and (max-width: 600px) {
     .navBar {
-        font-size: 20px;
-        width:100vh;
+        display:flex;
+        flex-wrap: wrap;
     }
-    .mainLobby-container{
-        margin-left: 100%;
-    }
+    // .mainLobby-container{
+    //     margin-left: 100%;
+    // }
 }
