--- a/public/style/mainLobby.css
+++ b/public/style/mainLobby.css
@@ -65,7 +65,7 @@
   justify-content: space-around;
   gap: 25px;
   border: none;
-  width: 600px;
+  width: 100%;
 }
 .single-lobby-player {
   width: 130px;
