--- a/public/style/loadingPage.css
+++ b/public/style/loadingPage.css
@@ -1,74 +1,70 @@
 .cookieClicker-loading-screen {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url('https://samburke.files.wordpress.com/2011/08/ready-set-go-pic-001.png');
+  background-image: url('https://previews.123rf.com/images/milkos/milkos1607/milkos160700253/59484343-cookies-and-sweet-biscuits-at-natural-wood-background-with-copy-space-oatmeal-and-chocolate-drops-co.jpg');
   background-position: center;
-  background-size: cover;
+  background-size: cover ;
   height: 800px;
 }
-.ready,
-.set,
-.go {
+.word {
+  position: absolute;
+  width: 220px;
+  height: 220px;
+  line-height: 2.7;
+  text-align: center;
+  font-family: Comic Sans MS, Comic Sans, cursive;
   font-size: 70px;
   color: white;
-  visibility: hidden;
-  padding: 25px;
+  text-shadow: 1px 1px 2px black, 0 0 25px #4088B7, 0 0 5px #574FC2;
+  opacity: 0;
   border-radius: 50%;
+  box-shadow: 0px 0px 8px 10px #072A41;
+  margin: 0;
+  margin-right: 20%;
 }
 .ready {
   animation: mymove 2s;
-  margin-top: 50px;
+  background-image: url(https://cdn.drawception.com/drawings/N0NQDqTXLN.png);
+}
+.set {
+  animation: mymove 2s;
+  animation-delay: 2s;
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTere_YZatyKujC94GCjeIPkrVhvKPnU85ljYtdiN67WfchFZe5V23NOOngdE6hX9mBHrM&usqp=CAU);
+}
+.go {
+  animation: mymove 2s;
+  animation-delay: 4s;
+  background-image: url('https://cdn.drawception.com/images/panels/2017/8-31/bceEXf27K8-10.png');
 }
 @keyframes mymove {
   from {
-    visibility: hidden;
-    text-shadow: 2px 2px 15px #000000;
+    opacity: 0;
   }
   to {
-    visibility: visible;
-    margin-left: 100px;
-    background-image: url('http://www.nigella.com/assets/uploads/recipes/chocolate-chip-cookies-56388ed4575b0.jpg');
-    background-position: center;
+    margin-left: 20%;
     background-size: cover;
+    width: 270px;
+    height: 270px;
+    line-height: 3.5;
+    opacity: 1;
   }
 }
-.set {
-  animation: mymove2 2s;
-  animation-delay: 2s;
-  margin-top: 50px;
-}
-@keyframes mymove2 {
-  from {
-    font-size: 90px;
-    visibility: hidden;
+@media only screen and (max-width: 850px) {
+  .word {
+    margin: 0;
   }
-  to {
-    font-size: 90px;
-    visibility: visible;
-    margin-left: 100px;
-    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqHTnpzqY1mUn32uQue1PyBzDC69nOhkgmMkGy0Mj_XJSQqRRUnttENainHfB6RzZtSfU&usqp=CAU');
-    background-position: center;
-    background-size: cover;
-  }
-}
-.go {
-  animation: mymove3 2s;
-  animation-delay: 4s;
-  margin-top: 50px;
-}
-@keyframes mymove3 {
-  from {
-    font-size: 110px;
-    visibility: hidden;
-  }
-  to {
-    font-size: 110px;
-    visibility: visible;
-    margin-left: 100px;
-    background-image: url('https://t3.ftcdn.net/jpg/02/19/32/48/360_F_219324829_hyEzNkzKJlQVlyARbPAz9j2REHTPIskq.jpg');
-    background-position: center;
-    background-size: cover;
+  @keyframes mymove {
+    from {
+      opacity: 0;
+    }
+    to {
+      background-position: center;
+      background-size: cover;
+      width: 250px;
+      height: 250px;
+      line-height: 3.5;
+      opacity: 1;
+    }
   }
 }
