--- a/public/style/winnerPage.css
+++ b/public/style/winnerPage.css
@@ -2,25 +2,31 @@
   text-align: center;
   font-weight: 600;
   font-size: 30px;
-  background-image: url('https://cdn.shopify.com/s/files/1/0257/6718/2416/files/Gold_Balloon_Zoom_Background.jpg?v=1595051323');
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  background-image: url('https://t3.ftcdn.net/jpg/03/51/32/50/360_F_351325048_SNzPFn1qGEVtEqqoxw8SANC12IauVSYo.jpg');
   background-position: center;
   background-size: cover;
-  height: 800px;
+  width: 70%;
+  height: 70%;
+  border-radius: 50%;
+  box-shadow: 0px 0px 8px 10px #072A41;
+  margin: auto;
+  resize: both;
 }
 .winner-title .title-word {
   animation: color-animation 4s linear infinite;
   font-family: Comic Sans MS, Comic Sans, cursive;
 }
 .winner-title .title-word-1 {
-  padding-top: 200px;
+  padding: 25% 5% 0 5%;
   --color-1: #5553df;
   --color-2: #3D8DAE;
-  --color-3: #E4A9A8;
+  --color-3: #9a47e8;
 }
 .winner-title .title-word-2 {
-  --color-1: #42d753;
-  --color-2: #ACCFCB;
-  --color-3: #17494D;
+  --color-1: #d74291;
+  --color-2: #c4accf;
+  --color-3: #b22fa3;
 }
 @keyframes color-animation {
   0% {
@@ -43,5 +49,46 @@
   }
   100% {
     color: var(--color-1);
+  }
+}
+.winner-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media only screen and (max-width: 600px) {
+  .winner-title {
+    font-size: 20px;
+  }
+  .winner-title .title-word-1 {
+    padding-top: 55%;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .winner-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1%;
+  }
+  .winner-title .title-word-2 {
+    margin-bottom: 30%;
+  }
+}
+@media screen and (max-height: 700px) {
+  .winner-title {
+    font-size: 20px;
+  }
+  .winner-title .title-word-1 {
+    padding: 15% 5% 0 5%;
+  }
+}
+@media screen and (max-height: 700px) and (max-width: 600px) {
+  .winner-title {
+    font-size: 15px;
+  }
+  .winner-title .title-word-1 {
+    padding: 25% 5% 0 5%;
   }
 }
