some CSS for editForm

--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -1,6 +1,7 @@
 @import './colors.less';
 
 .mainLobby-container {
+    background-color: white;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -87,3 +88,7 @@
     padding:10px;
     border:dimgray;
   }
+
+  @media only screen and (max-width: 600px) {
+    width:100vw;
+}
