--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -37,20 +37,33 @@
             font-family:sans-serif,serif;
             color:black;
         }
+        span {
+            font-family: cursive,serif;
+            font-size:24px;
+        }
 
     }
 }
 
 .footer {
     background-color: #486BBD;
-    padding:5px;
     display:flex;
     justify-content: space-around;
-    position: absolute;
-    bottom: 0;
+    position:relative;
+    margin-bottom: 0;
     width: 100%;
+    height:60px;
+    text-align: center;
 
     img {
+        margin:auto;
         height:46px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .navBar {
+        width:100%;
+      
     }
 }
