--- a/public/src/style.less
+++ b/public/src/style.less
@@ -20,21 +20,24 @@ h1 {
 @import './loadingPage.less';
 @import './winnerPage.less';
 @import './nav-footer.less';
+@import './profile.less';
 
 
 body{
-  min-height: 100vh;
-  display: grid;
+  height: 100vh;
+  width:100vw;
+  // display: grid;
   place-items: center;
-  // background-image: linear-gradient(@cookieLobbyBorders, @cookiebg, @cookieLobbyUser);
+  background-image: linear-gradient(@cookieLobbyBorders, @cookiebg, @cookieLobbyUser);
   color: var(--clr-btn);
-  padding-right: 10rem;
   margin:0;
 }
 
 #root {
-  width:100vw;
   height:100vh;
+  padding:0;
+  box-sizing:border-box;
+  
 }
 
 
