--- a/public/style/mainLobby.css
+++ b/public/style/mainLobby.css
@@ -1,11 +1,12 @@
 .mainLobby-container {
+  background-color: white;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
 .mainLobby-container h1 {
-  background-image: linear-gradient(45deg, #553c9a, #ee4b2b);
+  background-image: linear-gradient(45deg, #3c07cd, #c72707);
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
@@ -80,4 +81,7 @@
   border-radius: 10px;
   padding: 10px;
   border: dimgray;
+}
+@media only screen and (max-width: 600px) {
+  width: 100vw;
 }
