--- a/public/style/nav-footer.css
+++ b/public/style/nav-footer.css
@@ -1,4 +1,5 @@
 .navBar {
+  margin: 0;
   display: flex;
   justify-content: space-between;
   background-color: #486BBD;
@@ -13,10 +14,12 @@
 .navBar .logo span {
   font-family: monospace, sans-serif;
   font-weight: bolder;
+  font-size: 30px;
 }
 .navBar img {
-  height: 70px;
-  width: 100px;
+  height: 90px;
+  width: 140px;
+  border-radius: 50px;
 }
 .navBar .nav-right {
   display: flex;
@@ -31,12 +34,26 @@
   font-family: sans-serif, serif;
   color: black;
 }
+.navBar .nav-right span {
+  font-family: cursive,serif;
+  font-size: 24px;
+}
 .footer {
   background-color: #486BBD;
-  padding: 5px;
   display: flex;
   justify-content: space-around;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  text-align: center;
 }
 .footer img {
+  margin: auto;
   height: 46px;
+}
+@media only screen and (max-width: 600px) {
+  .navBar {
+    width: 100%;
+  }
 }
