--- a/public/style/style.css
+++ b/public/style/style.css
@@ -191,6 +191,7 @@ h1 {
   background-color: grey;
 }
 .lobby-container {
+  height: 100vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -224,6 +225,7 @@ h1 {
   background-color: bisque;
 }
 .mainLobby-container {
+  background-color: white;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -305,6 +307,9 @@ h1 {
   border-radius: 10px;
   padding: 10px;
   border: dimgray;
+}
+@media only screen and (max-width: 600px) {
+  width: 100vw;
 }
 .cookieClicker-loading-screen {
   display: flex;
@@ -463,27 +468,76 @@ h1 {
   font-family: sans-serif, serif;
   color: black;
 }
+.navBar .nav-right span {
+  font-family: cursive,serif;
+  font-size: 24px;
+}
 .footer {
   background-color: #486BBD;
-  padding: 5px;
   display: flex;
   justify-content: space-around;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
+  height: 60px;
+  text-align: center;
 }
 .footer img {
+  margin: auto;
   height: 46px;
 }
+@media only screen and (max-width: 600px) {
+  .navBar {
+    width: 100%;
+  }
+}
+.profile {
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  text-align: center;
+  height: calc(100% - 150px);
+}
+.profile h2 {
+  font-weight: bold;
+}
+.editProfile {
+  background-color: #8eb5f4;
+  width: 400px;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  padding: 50px;
+}
+.editProfile .form-title {
+  font-size: 20px;
+  font-weight: bold;
+}
+.editProfile form {
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+  gap: 20px;
+  margin-top: 30px;
+}
+.editProfile .form-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 10px;
+}
 body {
-  min-height: 100vh;
-  display: grid;
+  height: 100vh;
+  width: 100vw;
   place-items: center;
+  background-image: linear-gradient(#7C72E0, #3D35A7, #486BBD);
   color: var(--clr-btn);
-  padding-right: 10rem;
   margin: 0;
 }
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  box-sizing: border-box;
 }
