--- a/public/src/style.less
+++ b/public/src/style.less
@@ -46,5 +46,5 @@ html {
 
 .wrapper {
   min-height: 100vh;
-  background-image: linear-gradient(@cookieLobbyBorders, @cookiebg, @cookieLobbyBorders)
+  background-image: linear-gradient(@cookieLobbyBorders, @cookiebg, @cookieLobbyBorders);
 }
