--- a/public/style/mainLobby.css
+++ b/public/style/mainLobby.css
@@ -11,7 +11,7 @@
   -webkit-background-clip: text;
   font-weight: bolder;
   font-size: 56px;
-  font-family: cursive,serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin-bottom: 50px;
 }
 .gamesContainer {
@@ -44,7 +44,7 @@
 .cookieClicker-mainLobby-container {
   width: 300px;
   height: 300px;
-  background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
+  background-image: url("../images/cookie\ background.jpg");
   background-size: cover;
   border-radius: 20px;
   margin-bottom: 10px;
@@ -52,7 +52,7 @@
 .gameTwo-mainLobby-container {
   width: 300px;
   height: 300px;
-  background-image: url(https://media.istockphoto.com/vectors/seamless-background-with-cookies-vector-illustration-vector-id481893966?k=20&m=481893966&s=612x612&w=0&h=4jdnCccja5GRg662xzxAKGSDWHns5nciIo2k_HeA5Ag=);
+  background-image: url("../images/cookie\ background.jpg");
   background-size: cover;
   border-radius: 20px;
   margin-bottom: 10px;
