fully functional 4 player multiplayer

--- a/public/src/winnerPage.less
+++ b/public/src/winnerPage.less
@@ -30,9 +30,7 @@
     }
 
     .title-word-2 {
-        --color-1: #d74291;
-        --color-2: #c4accf;
-        --color-3: #b22fa3;
+        color: orange;
     }
 
 }
