--- a/public/style/style.css
+++ b/public/style/style.css
@@ -446,9 +446,7 @@ button:disabled {
   --color-3: #9a47e8;
 }
 .winner-title .title-word-2 {
-  --color-1: #d74291;
-  --color-2: #c4accf;
-  --color-3: #b22fa3;
+  color: orange;
 }
 @keyframes color-animation {
   0% {
