added cookie clicker CSS and fonts

--- a/public/src/colors.less
+++ b/public/src/colors.less
@@ -18,8 +18,9 @@
 //third palette colors
 
 @bg: #266C99;
-
 @Players: #072A41;
 @User: #175075;
 @Font: #4088B7;
 @Borders: #66ADDB;
+
+@header: coral;
