--- a/public/style/fonts.css
+++ b/public/style/fonts.css
@@ -1,8 +1,20 @@
 @font-face {
-  font-family: 'gemstone';
-  src: url(../fonts/Gemstone.ttf);
+  font-family: 'kidGames';
+  src: url(../fonts/Kid\ Games.ttf);
 }
 @font-face {
   font-family: 'Quantum';
   src: url(../fonts/Quantum.otf);
+}
+@font-face {
+  font-family: "hypik";
+  src: url("../fonts/hypik.otf");
+}
+@font-face {
+  font-family: "surfQuestTidal";
+  src: url("../fonts/surfquestspacedsemital.ttf");
+}
+@font-face {
+  font-family: "surfQuest";
+  src: url("../fonts/surfquestspaced.ttf");
 }
