--- a/public/src/cookie.less
+++ b/public/src/cookie.less
@@ -4,9 +4,11 @@
   margin-top: 60px;
   border-top: 25px;
 }
+h1{
+  color: @header;
+}
 
 .cookie-container{
-  background-color: rgb(135, 238, 238);
   display: flex;
   width:400px;
   height:500px;
@@ -14,14 +16,26 @@
   flex-direction: column;
   justify-content: center;
   align-items:center;
+  text-align: center;
   h2{
-    color:rgb(3, 3, 55);
+    color: @mainLobbyFont;
+    text-shadow: 3px 3px black;
+    font-weight: bolder;
   }
-  h4{
-    color:rgb(3, 3, 55);
+  h3{
+    color: @mainLobbyFont;
+    text-shadow: 3px 3px black;
   }
   img{
     border-radius: 50%;
+    transition:transform 0.25s ease;
+    cursor: pointer;
+    width: 400px;
+  }
+
+  img:active{
+    -webkit-transform:scale(0.5); /* or some other value */
+    transform:scale(1.3);
   }
 }
 
