--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -7,8 +7,7 @@
     align-items: center;
 
     h1{
-      background-image: linear-gradient(45deg, #3c07cd, #c72707);;
-      color: transparent;
+      color: @header;
       background-clip: text;
       -webkit-background-clip: text;
       font-weight:bolder;
@@ -79,7 +78,8 @@
   .single-lobby-player {
     .main-lobby-player;
     background-color: @mainLobbyPlayers;
-    box-shadow: 0 0 0.5em 0 black;
+    color: white;
+    box-shadow: 0 0 0.7em 0 black;
   }
 
   .main-lobby-player {
@@ -91,4 +91,6 @@
     box-shadow: 0 0 0.5em .5em whitesmoke;
   }
 
-
+  .eachGame:hover{
+    box-shadow: 0 0 0.5em .2em lightcoral;
+  }
