--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -13,9 +13,9 @@
         gap:5px;
         flex-direction: row;
         span {
-            font-family: 'Quantum';
-            font-weight: bolder;
-            font-size: 30px;
+            font-family: 'surfQuestTidal';
+            font-size: 4em;
+            text-shadow: 1px 1px lightgrey;
         }
     }
     img {
@@ -31,11 +31,20 @@
         gap:30px;
         margin-right: 30px;
 
+        span{
+            text-decoration: none;
+            font-size: 2em;
+            font-family:"surfQuest";
+            color:black;
+            text-shadow: 1px 1px grey; 
+        }
+
         .nav-link {
             text-decoration: none;
-            font-size: 24px;
-            font-family:sans-serif,serif;
+            font-size: 2.5em;
+            font-family:"surfQuest";
             color:black;
+            text-shadow: 1px 1px grey;
         }
 
     }
