--- a/public/src/style.less
+++ b/public/src/style.less
@@ -47,4 +47,12 @@ html {
 .wrapper {
   min-height: 100vh;
   background-image: linear-gradient(@cookieLobbyBorders, @cookiebg, @cookieLobbyBorders);
+  h1{
+    display: flex;
+    justify-content: center;
+    font-family: "kidGames";
+    font-size: 4em;
+    text-shadow: 3px 3px black;
+    text-align: center;
+  }
 }
