--- a/public/style/nav-footer.css
+++ b/public/style/nav-footer.css
@@ -12,9 +12,9 @@
   flex-direction: row;
 }
 .navBar .logo span {
-  font-family: 'Quantum';
-  font-weight: bolder;
-  font-size: 30px;
+  font-family: 'surfQuestTidal';
+  font-size: 4em;
+  text-shadow: 1px 1px lightgrey;
 }
 .navBar img {
   height: 90px;
@@ -28,11 +28,19 @@
   gap: 30px;
   margin-right: 30px;
 }
+.navBar .nav-right span {
+  text-decoration: none;
+  font-size: 2em;
+  font-family: "surfQuest";
+  color: black;
+  text-shadow: 1px 1px grey;
+}
 .navBar .nav-right .nav-link {
   text-decoration: none;
-  font-size: 24px;
-  font-family: sans-serif, serif;
+  font-size: 2.5em;
+  font-family: "surfQuest";
   color: black;
+  text-shadow: 1px 1px grey;
 }
 .footer {
   background-color: #486BBD;
