--- a/public/style/style.css
+++ b/public/style/style.css
@@ -8,12 +8,24 @@ h1 {
   color: red;
 }
 @font-face {
-  font-family: 'gemstone';
-  src: url(../fonts/Gemstone.ttf);
+  font-family: 'kidGames';
+  src: url(../fonts/Kid\ Games.ttf);
 }
 @font-face {
   font-family: 'Quantum';
   src: url(../fonts/Quantum.otf);
+}
+@font-face {
+  font-family: "hypik";
+  src: url("../fonts/hypik.otf");
+}
+@font-face {
+  font-family: "surfQuestTidal";
+  src: url("../fonts/surfquestspacedsemital.ttf");
+}
+@font-face {
+  font-family: "surfQuest";
+  src: url("../fonts/surfquestspaced.ttf");
 }
 .cookies-container {
   display: flex;
@@ -21,8 +33,10 @@ h1 {
   margin-top: 60px;
   border-top: 25px;
 }
+h1 {
+  color: coral;
+}
 .cookie-container {
-  background-color: #87eeee;
   display: flex;
   width: 400px;
   height: 500px;
@@ -30,15 +44,27 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 .cookie-container h2 {
-  color: #030337;
+  color: white;
+  text-shadow: 3px 3px black;
+  font-weight: bolder;
 }
-.cookie-container h4 {
-  color: #030337;
+.cookie-container h3 {
+  color: white;
+  text-shadow: 3px 3px black;
 }
 .cookie-container img {
   border-radius: 50%;
+  transition: transform 0.25s ease;
+  cursor: pointer;
+  width: 400px;
+}
+.cookie-container img:active {
+  -webkit-transform: scale(0.5);
+  /* or some other value */
+  transform: scale(1.3);
 }
 .join-button {
   font-size: 1.2em;
@@ -270,8 +296,7 @@ button:disabled {
   align-items: center;
 }
 .mainLobby-container h1 {
-  background-image: linear-gradient(45deg, #3c07cd, #c72707);
-  color: transparent;
+  color: coral;
   background-clip: text;
   -webkit-background-clip: text;
   font-weight: bolder;
@@ -340,7 +365,8 @@ button:disabled {
   border: dimgray;
   box-shadow: 0 0 0.5em 0.5em whitesmoke;
   background-color: #1D397A;
-  box-shadow: 0 0 0.5em 0 black;
+  color: white;
+  box-shadow: 0 0 0.7em 0 black;
 }
 .main-lobby-player {
   width: 130px;
@@ -349,6 +375,9 @@ button:disabled {
   padding: 10px;
   border: dimgray;
   box-shadow: 0 0 0.5em 0.5em whitesmoke;
+}
+.eachGame:hover {
+  box-shadow: 0 0 0.5em 0.2em lightcoral;
 }
 .cookieClicker-loading-screen {
   display: flex;
@@ -526,9 +555,9 @@ button:disabled {
   flex-direction: row;
 }
 .navBar .logo span {
-  font-family: 'Quantum';
-  font-weight: bolder;
-  font-size: 30px;
+  font-family: 'surfQuestTidal';
+  font-size: 4em;
+  text-shadow: 1px 1px lightgrey;
 }
 .navBar img {
   height: 90px;
@@ -542,11 +571,19 @@ button:disabled {
   gap: 30px;
   margin-right: 30px;
 }
+.navBar .nav-right span {
+  text-decoration: none;
+  font-size: 2em;
+  font-family: "surfQuest";
+  color: black;
+  text-shadow: 1px 1px grey;
+}
 .navBar .nav-right .nav-link {
   text-decoration: none;
-  font-size: 24px;
-  font-family: sans-serif, serif;
+  font-size: 2.5em;
+  font-family: "surfQuest";
   color: black;
+  text-shadow: 1px 1px grey;
 }
 .footer {
   background-color: #486BBD;
@@ -602,4 +639,12 @@ html {
 .wrapper {
   min-height: 100vh;
   background-image: linear-gradient(#7C72E0, #3D35A7, #7C72E0);
+}
+.wrapper h1 {
+  display: flex;
+  justify-content: center;
+  font-family: "kidGames";
+  font-size: 4em;
+  text-shadow: 3px 3px black;
+  text-align: center;
 }
