--- a/public/style/winnerPage.css
+++ b/public/style/winnerPage.css
@@ -24,9 +24,7 @@
   --color-3: #9a47e8;
 }
 .winner-title .title-word-2 {
-  --color-1: #d74291;
-  --color-2: #c4accf;
-  --color-3: #b22fa3;
+  color: orange;
 }
 @keyframes color-animation {
   0% {
