--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -13,16 +13,16 @@
         gap:5px;
         flex-direction: row;
         span {
-            font-family: 'Quantum';
+            font-family: 'PEOPLEBOOK';
             font-weight: bolder;
             font-size: 30px;
         }
     }
-    img {
-        height:90px;
-        width:140px;
-        border-radius: 50px;
-    }
+    // img {
+    //     height:90px;
+    //     width:140px;
+    //     border-radius: 50px;
+    // }
 
     .nav-right {
         display:flex;
