--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -7,13 +7,14 @@
     align-items: center;
 
     h1{
-      background-image: linear-gradient(45deg, #3c07cd, #c72707);;
-      color: transparent;
+      // background-image: linear-gradient(45deg, #3c07cd, #c72707);
+      color: darkblue;
       background-clip: text;
       -webkit-background-clip: text;
       font-weight:bolder;
       font-size: 56px;
-      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      // font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-family: Starborn;
       margin-bottom: 50px;
     }
   }
