--- a/public/src/profile.less
+++ b/public/src/profile.less
@@ -1,11 +1,12 @@
 .profile {
-    margin: 0;
-    padding:0;
-    background-color: white;
+    // margin: 0;
+    // padding:0;
+    // background-color: white;
     text-align: center;
-    height: calc(100% - 150px);
+    // height: calc(100% - 150px);
     h2 {
         font-weight: bold;
+        margin-top: 20px;
     }
 }
 
@@ -34,7 +35,13 @@
     .form-item {
         display:flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: center;
+        align-items: center;
         gap:10px;
+        
+        input {
+            height:40px;
+            border-radius: 5px;
+        }
     }
 }
