--- a/public/style/fonts.css
+++ b/public/style/fonts.css
@@ -6,3 +6,11 @@
   font-family: 'Quantum';
   src: url(../fonts/Quantum.otf);
 }
+@font-face {
+  font-family: 'PEOPLEBOOK';
+  src: url(../fonts/peopleBook.otf);
+}
+@font-face {
+  font-family: 'Starborn';
+  src: url(../fonts/Starborn.ttf);
+}
