--- a/public/style/mainLobby.css
+++ b/public/style/mainLobby.css
@@ -1,18 +1,16 @@
 .mainLobby-container {
-  background-color: white;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
 .mainLobby-container h1 {
-  background-image: linear-gradient(45deg, #3c07cd, #c72707);
-  color: transparent;
+  color: darkblue;
   background-clip: text;
   -webkit-background-clip: text;
   font-weight: bolder;
   font-size: 56px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: Starborn;
   margin-bottom: 50px;
 }
 .gamesContainer {
@@ -85,7 +83,4 @@
   padding: 10px;
   border: dimgray;
   box-shadow: 0 0 0.5em 0.5em whitesmoke;
-}
-@media only screen and (max-width: 600px) {
-  width: 100vw;
 }
