--- a/public/style/nav-footer.css
+++ b/public/style/nav-footer.css
@@ -12,14 +12,9 @@
   flex-direction: row;
 }
 .navBar .logo span {
-  font-family: 'Quantum';
+  font-family: 'PEOPLEBOOK';
   font-weight: bolder;
   font-size: 30px;
-}
-.navBar img {
-  height: 90px;
-  width: 140px;
-  border-radius: 50px;
 }
 .navBar .nav-right {
   display: flex;
